unpackaged/main/default/objects/Order/fields/Payment_Date_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date_Calculation_Method__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Payment_Date_Calculation_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Date Calculation Method</label>
    <type>Text</type>
</CustomField>