unpackaged/main/default/objects/Order/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <formula>IF( B2BOrder__c , 
CASE( PaymentTypes__c , 'SEPA', 'Debit', 'CB', 'Carte Bancaire',''), 
TEXT(SBQQ__Quote__r.Payment_Method__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Method</label>
    <type>Text</type>
</CustomField>