unpackaged/main/default/objects/Order/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <formula>IF( B2BOrder__c , 
CASE( Payment_Method__c , 'Debit', '30', 'Carte Bancaire', '0',''), 
TEXT(SBQQ__Quote__r.Payment_Term__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term</label>
    <type>Text</type>
</CustomField>