unpackaged/main/default/objects/Order/fields/Primary_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Full_Name__c</fullName>
    <label>Primary Contact Full Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>