unpackaged/main/default/objects/Order/fields/PSSalesRep__c.field-meta.xml
<CustomField>
    <fullName>PSSalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Sales Rep</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (PS Sales Rep)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>