unpackaged/main/default/objects/Order/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>30</length>
    <type>Text</type>
</CustomField>