unpackaged/main/default/objects/Order/fields/Recurring_SaaS_Amount_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Recurring_SaaS_Amount_Monthly__c</fullName>
    <formula>SBQQ__Quote__r.Recurring_SaaS_Amount_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring SaaS Amount Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>