unpackaged/main/default/objects/Order/fields/Renewal_Mode__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Mode__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Renewal_Mode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Mode</label>
    <type>Text</type>
</CustomField>