unpackaged/main/default/objects/Order/fields/Sales_Label__c.field-meta.xml
<CustomField>
    <fullName>Sales_Label__c</fullName>
    <formula>SBQQ__Quote__r.Sales_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Label</label>
    <type>Text</type>
</CustomField>