unpackaged/main/default/objects/Order/fields/Second_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Second_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Second Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>