unpackaged/main/default/objects/Order/fields/Service_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Activation_Date__c</fullName>
    <label>Service Activation Date</label>
    <type>Date</type>
</CustomField>