unpackaged/main/default/objects/Order/fields/Service_Activation_Date_Max__c.field-meta.xml
<CustomField>
    <fullName>Service_Activation_Date_Max__c</fullName>
    <formula>datevalue(ActivatedDate) + Delay_for_Service_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Activation Date Max</label>
    <type>Date</type>
</CustomField>