unpackaged/main/default/objects/Order/fields/Service_Delivery_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_City__c</fullName>
    <label>Service Delivery City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>