unpackaged/main/default/objects/Order/fields/Service_Delivery_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Company_Name__c</fullName>
    <label>Service Delivery Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>