unpackaged/main/default/objects/Order/fields/Service_Delivery_Country__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Country__c</fullName>
    <label>Service Delivery Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>