unpackaged/main/default/objects/Order/fields/Service_Delivery_Numoetia__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Numoetia__c</fullName>
    <label>Service Delivery Numoetia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>