unpackaged/main/default/objects/Order/fields/Service_Delivery_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Postal_Code__c</fullName>
    <label>Service Delivery Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>