unpackaged/main/default/objects/Order/fields/Service_Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_State__c</fullName>
    <label>Service Delivery State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>