unpackaged/main/default/objects/Order/fields/Service_Delivery_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Street__c</fullName>
    <label>Service Delivery Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>