unpackaged/main/default/objects/Order/fields/Service_Delivery_Tieoetia__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Tieoetia__c</fullName>
    <label>Service Delivery Tieoetia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>