unpackaged/main/default/objects/Order/fields/Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_City__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingCity ,SBQQ__Quote__r.SBQQ__ShippingCity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To City</label>
    <type>Text</type>
</CustomField>