unpackaged/main/default/objects/Order/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingCountry ,SBQQ__Quote__r.SBQQ__ShippingCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Country</label>
    <type>Text</type>
</CustomField>