unpackaged/main/default/objects/Order/fields/Ship_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Name__c</fullName>
    <formula>IF( B2BOrder__c , Account.Name ,SBQQ__Quote__r.SBQQ__ShippingName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Name</label>
    <type>Text</type>
</CustomField>