unpackaged/main/default/objects/Order/fields/Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Postal_Code__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingPostalCode ,SBQQ__Quote__r.SBQQ__ShippingPostalCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Postal Code</label>
    <type>Text</type>
</CustomField>