unpackaged/main/default/objects/Order/fields/Ship_To_Street__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Street__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingStreet ,SBQQ__Quote__r.SBQQ__ShippingStreet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Street</label>
    <type>Text</type>
</CustomField>