unpackaged/main/default/objects/Order/fields/Shipping_Account__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Shipping Account)</relationshipLabel>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>