unpackaged/main/default/objects/Order/fields/ShippingContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactEmail__c</fullName>
    <description>Shipping contact email, editable in DocuSign</description>
    <label>Shipping Contact Email</label>
    <type>Email</type>
</CustomField>