unpackaged/main/default/objects/Order/fields/ShippingContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactFirstName__c</fullName>
    <description>Shipping contact first name, editable in DocuSign</description>
    <label>Shipping Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>