unpackaged/main/default/objects/Order/fields/ShippingContactLastName__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactLastName__c</fullName>
    <description>Shipping contact last name, editable in DocuSign</description>
    <label>Shipping Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>