unpackaged/main/default/objects/Order/fields/ShippingContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactMobilePhone__c</fullName>
    <description>Shipping contact mobile, editable in DocuSign</description>
    <label>Shipping Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>