unpackaged/main/default/objects/Order/fields/ShippingContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactPhone__c</fullName>
    <description>Shipping contact phone, editable in DocuSign</description>
    <label>Shipping Contact Phone</label>
    <type>Phone</type>
</CustomField>