unpackaged/main/default/objects/Order/fields/ShippingContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>ShippingContactSalutation__c</fullName>
    <label>Shipping Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>