unpackaged/main/default/objects/Order/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <formula>SBQQ__Quote__r.Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>