unpackaged/main/default/objects/Order/fields/TECH_AccountName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AccountName__c</fullName>
    <description>US W-001599 - BtoB_US28_mail de confirmation de commande</description>
    <formula>Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>