unpackaged/main/default/objects/Order/fields/TECH_CreatedDateFrench__c.field-meta.xml
<CustomField>
    <fullName>TECH_CreatedDateFrench__c</fullName>
    <description>US W-001599 - BtoB_US28_mail de confirmation de commande</description>
    <formula>TEXT(DAY(DATEVALUE(CreatedDate))) 
+ ' ' 
+ CASE(TEXT(MONTH(DATEVALUE(CreatedDate))), 
"1", "janv.", 
"2", "févr.",
"3", "mars",
"4", "avr.",
"5", "mai",
"6", "juin",
"7", "juil.",
"8", "août",
"9", "sept.",
"10", "oct.",
"11", "nov.",
"12", "déc.",
null) 
+ ' ' 
+ TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Created Date (French)</label>
    <type>Text</type>
</CustomField>