unpackaged/main/default/objects/Order/fields/Tech_OrderProductNumber__c.field-meta.xml
<CustomField>
    <fullName>Tech_OrderProductNumber__c</fullName>
    <label>Tech_OrderProductNumber</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>