unpackaged/main/default/objects/Order/fields/TECH_ToBeActivated__c.field-meta.xml
<CustomField>
    <fullName>TECH_ToBeActivated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_ToBeActivated</label>
    <type>Checkbox</type>
</CustomField>