unpackaged/main/default/objects/Order/fields/ToSchedule__c.field-meta.xml
<CustomField>
    <fullName>ToSchedule__c</fullName>
    <formula>SBQQ__Quote__r.ToSchedule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ToSchedule</label>
    <type>Checkbox</type>
</CustomField>