unpackaged/main/default/objects/Order/fields/Total_Subscription_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscription_Discount__c</fullName>
    <formula>SBQQ__Quote__r.Total_Subscription_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Subscription Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>