unpackaged/main/default/objects/Order/fields/UMR__c.field-meta.xml
<CustomField>
    <fullName>UMR__c</fullName>
    <label>RUM</label>
    <length>35</length>
    <type>Text</type>
</CustomField>