unpackaged/main/default/objects/Order/fields/XRP_Order__c.field-meta.xml
<CustomField>
    <fullName>XRP_Order__c</fullName>
    <description>W-001931 order number from XRP</description>
    <label>XRP Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>