unpackaged/main/default/objects/Order/validationRules/Purchase_Order_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Purchase_Order_is_mandatory</fullName>
    <active>true</active>
    <description>The account requires a purchase order number for order creation.</description>
    <errorConditionFormula>AND(Account.Order_Number__c, (LEN(Order_Number__c) &lt; 1))</errorConditionFormula>
    <errorDisplayField>Order_Number__c</errorDisplayField>
    <errorMessage>Purchase Order is required</errorMessage>
</ValidationRule>