unpackaged/main/default/objects/Order/listViews/AllDraftOrders.listView-meta.xml
<ListView>
    <fullName>AllDraftOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Order_Total__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>D</value>
    </filters>
    <label>All Draft Orders</label>
</ListView>