unpackaged/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Order_Total__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Order_Number__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>B2BOrder__c</columns>
    <columns>Signed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_AccountName__c</field>
        <operation>notContain</operation>
        <value>CEGID</value>
    </filters>
    <label>Toutes les commandes</label>
</ListView>